--- a/Prototype/package.json
+++ b/Prototype/package.json
@@ -1,7 +1,6 @@
 {
   "name": "csc490-capstone",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,15 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^9.4.3",
+    "better-sqlite3": "^9.6.0",
     "csc300x-project": "file:",
-    "ejs": "^3.1.9",
-    "express": "^4.19.1",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "description": ""
 }
