--- a/Prototype/package.json
+++ b/Prototype/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
     "path": "^0.12.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
