--- a/Prototype/package.json
+++ b/Prototype/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^9.4.3",
     "csc300x-project": "file:",
     "ejs": "^3.1.9",
