--- a/Prototype/package.json
+++ b/Prototype/package.json
@@ -24,6 +24,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
